--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,10 @@
 <h1><%= @article.title %></h1>
-<p><%= @article.body %></p>
+<p><%= @article.body %><br></p>
+
+<br>
 <%= link_to "<< Back to all articles", articles_path %>
+<br>
+<%= link_to "Edit", edit_article_path(@article) %>
+<br>
+<%= link_to "Delete", article_path(@article), method: :delete,
+data: {confirm: "Are you sure you want to delete this article?"} %>
