--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,12 @@
 <p><%= @article.body %><br></p>
 
 <br>
+<%= render partial: 'comments/form' %>
+<br>
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<br>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+<br>
 <%= link_to "<< Back to all articles", articles_path %>
 <br>
 <%= link_to "Edit", edit_article_path(@article) %>
